# Medusa

./: CMakeLists.txt  Doxyfile  README.md  template_flow.html
cmake/: AddTarget.cmake  AddTarget_Benchmarks.cmake  AddTarget_Fit.cmake  AddTarget_PhiS.cmake  FindHydra.cmake  FindROOT.cmake
medusa/: Angles.h  Cerf.h  Cerf.inl  Constants.h  CubicSpline.h  CubicSpline.inl  Emptyfile.h  Faddeeva.h  Faddeeva.inl  Functions.h  Template.h
medusa/generic/: Constants.h  CubicSpline.h  CubicSpline.inl  Faddeeva.h  Faddeeva.inl  Functions.h  PlanesDeltaAngle.h  Print.h
medusa/models/: Utils.h
medusa/models/B2Kstarmumu/: KstmumuAngularDist.h
medusa/models/B2Kstarmumu/detail/: ACoefficients_B2Kstarmumu.h  kstarmumu_angular_functions.h
medusa/models/D2hhmumu/: D2hhmumuAngularDist.h
medusa/models/D2hhmumu/detail/: ACoefficients_D2hhmumu.h
medusa/models/phi_s/: PhisAngularDist.h  PhisN.h  PhisSignalOnly.h  PhisTagging.h  PhisTimeDist.h  PhisTimeRes.h
medusa/models/phi_s/detail/: AFactors.h  ATCoeficients.h  NFactors.h  PhisSignalOnly.inl  phis_N_functions.h  phis_angular_functions.h  phis_indices.h  phis_time_functions.h
medusa/phi_s/: GenerateDataset.h  Parameters.h  PhisSignal.h  Print.h
medusa/phi_s/details/: Parameters.h  Update_ATCoefficients.inl
medusa/phi_s/phis_full/: FullAnalyticPhis.h  GenerateDataset.h  ImportDataset.h  PhisFull.h
medusa/phi_s/phis_full/details/: IntegrationFormula.inl  Update_ATCoefficients.inl
medusa/phi_s/phis_signal/: GenerateDataset.h  PhisSignal.h
medusa/phi_s/phis_signal/details/: IntegrationFormula.inl  Update_ATCoefficients.inl
src/: benchmarks_B0s_Jpsi_phi.cpp  benchmarks_B0s_Jpsi_phi.cu  fit_B0s_Jpsi_phi.cpp  fit_B0s_Jpsi_phi.cu  fit_B0s_Jpsi_phi.inl  test.cpp  test.cu  test.inl  test_D2hhmumu.cu  test_D2hhmumu.inl  test_ctors.cpp  test_ctors.inl  test_phis_JpsiKK.cpp  test_phis_JpsiKK.inl
src/benchmarks/: benchmarks2_B0s_Jpsi_phi.cpp  benchmarks2_B0s_Jpsi_phi.cu  benchmarks2_B0s_Jpsi_phi.inl  benchmarks2_B0s_Jpsi_phi_signal.cpp  benchmarks2_B0s_Jpsi_phi_signal.inl  benchmarks_B0s_Jpsi_phi.cpp  benchmarks_B0s_Jpsi_phi_full.inl  benchmarks_B0s_Jpsi_phi_signal.cpp  benchmarks_B0s_Jpsi_phi_signal.cu  benchmarks_B0s_Jpsi_phi_signal.inl
src/fit/: fit_B0s_Jpsi_phi_full.cpp  fit_B0s_Jpsi_phi_full.cu  fit_B0s_Jpsi_phi_full.inl  fit_B0s_Jpsi_phi_signal.cpp  fit_B0s_Jpsi_phi_signal.cu
src/phi_s/benchmarks/: benchmarks2_B0s_Jpsi_phi_full.cpp  benchmarks2_B0s_Jpsi_phi_full.cu  benchmarks2_B0s_Jpsi_phi_full.inl  benchmarks2_B0s_Jpsi_phi_signal.cpp  benchmarks2_B0s_Jpsi_phi_signal.cu  benchmarks2_B0s_Jpsi_phi_signal.inl  benchmarks_B0s_Jpsi_phi_full.cpp  benchmarks_B0s_Jpsi_phi_full.cu  benchmarks_B0s_Jpsi_phi_full.inl  benchmarks_B0s_Jpsi_phi_signal.cpp  benchmarks_B0s_Jpsi_phi_signal.cu  benchmarks_B0s_Jpsi_phi_signal.inl  benchmarks_complete_B0s_Jpsi_phi_full.cpp  benchmarks_complete_B0s_Jpsi_phi_full.cu  benchmarks_complete_B0s_Jpsi_phi_full.inl  benchmarks_complete_B0s_Jpsi_phi_signal.cpp  benchmarks_complete_B0s_Jpsi_phi_signal.cu  benchmarks_complete_B0s_Jpsi_phi_signal.inl  benchmarks_complete_sim_phis_full_model.cpp  benchmarks_complete_sim_phis_full_model.cu  benchmarks_complete_sim_phis_full_model.inl  benchmarks_complete_sim_phis_only_signal.cpp  benchmarks_complete_sim_phis_only_signal.cu  benchmarks_complete_sim_phis_only_signal.inl  benchmarks_simple_B0s_Jpsi_phi_full.cpp  benchmarks_simple_B0s_Jpsi_phi_full.cu  benchmarks_simple_B0s_Jpsi_phi_full.inl  benchmarks_simple_B0s_Jpsi_phi_signal.cpp  benchmarks_simple_B0s_Jpsi_phi_signal.cu  benchmarks_simple_B0s_Jpsi_phi_signal.inl  benchmarks_simple_sim_phis_full_model.cpp  benchmarks_simple_sim_phis_full_model.cu  benchmarks_simple_sim_phis_full_model.inl  benchmarks_simple_sim_phis_only_signal.cpp  benchmarks_simple_sim_phis_only_signal.cu  benchmarks_simple_sim_phis_only_signal.inl
src/phi_s/fit/: fit_B0s_Jpsi_phi_full.cpp  fit_B0s_Jpsi_phi_full.cu  fit_B0s_Jpsi_phi_full.inl  fit_B0s_Jpsi_phi_signal.cpp  fit_B0s_Jpsi_phi_signal.cu  fit_B0s_Jpsi_phi_signal.inl  fit_real_phis_full_model.cpp  fit_real_phis_full_model.cu  fit_real_phis_full_model.inl  fit_sim_phis_full_model.cpp  fit_sim_phis_full_model.cu  fit_sim_phis_full_model.inl  fit_sim_phis_only_signal.cpp  fit_sim_phis_only_signal.cu  fit_sim_phis_only_signal.inl
